# hackathon-submission-template

./: .gitignore  README.md  copy_and_paste_is_bad.py  copy_and_paste_is_great.py  create_plots.py  data_transformation.py  edge_list.csv  multi_scrape.py  network_analysis_gui.py  network_analysis_tool.R  plotting.py  pyproject.toml  requirements.txt  scrape.py  temp.py  timo_plots.py  user_attributes.csv  user_info.csv
Demo_outputs/: README.md  edge_list.csv  user_info.csv  user_info.json
