[tool.poetry]
name = "wiki_utils"
version = "0.1.0"
description = ""
authors = ["Jakob Hauser <jakob.e.hauser@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
snscrape = "^0.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pyright = "^1.1.255"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
